examples/test/testpolicy16059.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16059
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key26: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value10
          key34: value16
          key48: value38
      podSelector:
        matchLabels:
          key19: value42
          key40: value47
          key5: value34
